[gd_scene load_steps=10 format=2]

[ext_resource path="res://menu/gameOver.tscn" type="PackedScene" id=1]
[ext_resource path="res://palyer/palyer.tscn" type="PackedScene" id=2]
[ext_resource path="res://recursos/piso/piso.png" type="Texture" id=3]
[ext_resource path="res://recursos/font/Full Edicion 0002.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://recursos/song/Button29.wav" type="AudioStream" id=5]
[ext_resource path="res://niveles/game.gd" type="Script" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 300, 10 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 300, 150 )

[node name="game" type="Node2D"]
script = ExtResource( 11 )
gameOver = ExtResource( 1 )

[node name="background" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="background"]
margin_right = 600.0
margin_bottom = 300.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParallaxLayer" type="ParallaxLayer" parent="background"]
motion_mirroring = Vector2( 1200, 0 )

[node name="Sprite" type="Sprite" parent="background/ParallaxLayer"]
texture = ExtResource( 3 )
centered = false
offset = Vector2( 0, 220 )

[node name="palyer" parent="." instance=ExtResource( 2 )]
position = Vector2( 80.7206, 126.584 )

[node name="piso" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="piso"]
position = Vector2( 300, 245 )
shape = SubResource( 1 )

[node name="score" type="Label" parent="."]
margin_left = 500.0
margin_top = 10.0
margin_right = 550.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.32549, 0.32549, 0.32549, 1 )
text = "00000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nuevoScore" type="Label" parent="."]
margin_left = 370.0
margin_top = 10.0
margin_right = 484.0
margin_bottom = 34.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.32549, 0.32549, 0.32549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="timescore" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="limite" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="."]
shape = SubResource( 3 )
passby_press = true
action = "ui_up"
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="timescore" to="." method="_on_timescore_timeout"]
